--- a/index.html
+++ b/index.html
@@ -29,6 +29,69 @@
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
+        <div id="hour-9" class="row time-block">
+            <div class="col-md-1 hour">
+                9AM
+            </div>
+            <textarea class="col-md-10 description">
+        </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+
+        </div>
+        <div id="hour-9" class="row time-block">
+            <div class="col-md-1 hour">
+                9AM
+            </div>
+            <textarea class="col-md-10 description">
+        </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+
+        </div>
+        <div id="hour-9" class="row time-block">
+            <div class="col-md-1 hour">
+                9AM
+            </div>
+            <textarea class="col-md-10 description">
+        </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+
+        </div>
+        <div id="hour-9" class="row time-block">
+            <div class="col-md-1 hour">
+                9AM
+            </div>
+            <textarea class="col-md-10 description">
+        </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+
+        </div>
+        <div id="hour-9" class="row time-block">
+            <div class="col-md-1 hour">
+                9AM
+            </div>
+            <textarea class="col-md-10 description">
+        </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+
+        </div>
+        <div id="hour-9" class="row time-block">
+            <div class="col-md-1 hour">
+                9AM
+            </div>
+            <textarea class="col-md-10 description">
+        </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+
+        </div>
+        <div id="hour-9" class="row time-block">
+            <div class="col-md-1 hour">
+                9AM
+            </div>
+            <textarea class="col-md-10 description">
+        </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+
+        </div>
 
 </body>
 
