updated copied code to reflect in id military time for moment js and updated dom display of time non military time

--- a/index.html
+++ b/index.html
@@ -29,63 +29,72 @@
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
-        <div id="hour-9" class="row time-block">
+        <div id="hour-10" class="row time-block">
             <div class="col-md-1 hour">
-                9AM
+                10AM
             </div>
             <textarea class="col-md-10 description">
         </textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
-        <div id="hour-9" class="row time-block">
+        <div id="hour-11" class="row time-block">
             <div class="col-md-1 hour">
-                9AM
+                11AM
             </div>
             <textarea class="col-md-10 description">
         </textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
-        <div id="hour-9" class="row time-block">
+        <div id="hour-12" class="row time-block">
             <div class="col-md-1 hour">
-                9AM
+                12AM
             </div>
             <textarea class="col-md-10 description">
         </textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
-        <div id="hour-9" class="row time-block">
+        <div id="hour-13" class="row time-block">
             <div class="col-md-1 hour">
-                9AM
+                1PM
             </div>
             <textarea class="col-md-10 description">
         </textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
-        <div id="hour-9" class="row time-block">
+        <div id="hour-14" class="row time-block">
             <div class="col-md-1 hour">
-                9AM
+                2PM
             </div>
             <textarea class="col-md-10 description">
         </textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
-        <div id="hour-9" class="row time-block">
+        <div id="hour-15 class="row time-block">
             <div class="col-md-1 hour">
-                9AM
+                3PM
             </div>
             <textarea class="col-md-10 description">
         </textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
-        <div id="hour-9" class="row time-block">
+        <div id="hour-16" class="row time-block">
             <div class="col-md-1 hour">
-                9AM
+                4PM
+            </div>
+            <textarea class="col-md-10 description">
+        </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+
+        </div>
+        <div id="hour-17" class="row time-block">
+            <div class="col-md-1 hour">
+                5PM
             </div>
             <textarea class="col-md-10 description">
         </textarea>
