--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
-        <div id="hour-15 class="row time-block">
+        <div id="hour-15" class="row time-block">
             <div class="col-md-1 hour">
                 3PM
             </div>
