--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
+
         <div id="hour-9" class="row time-block">
             <div class="col-md-1 hour">
                 9AM
@@ -29,6 +30,7 @@
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
+
         <div id="hour-10" class="row time-block">
             <div class="col-md-1 hour">
                 10AM
@@ -38,6 +40,7 @@
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
+
         <div id="hour-11" class="row time-block">
             <div class="col-md-1 hour">
                 11AM
@@ -47,6 +50,7 @@
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
+
         <div id="hour-12" class="row time-block">
             <div class="col-md-1 hour">
                 12AM
@@ -56,6 +60,7 @@
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
+
         <div id="hour-13" class="row time-block">
             <div class="col-md-1 hour">
                 1PM
@@ -65,6 +70,7 @@
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
+
         <div id="hour-14" class="row time-block">
             <div class="col-md-1 hour">
                 2PM
@@ -74,6 +80,7 @@
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
+
         <div id="hour-15" class="row time-block">
             <div class="col-md-1 hour">
                 3PM
@@ -83,6 +90,7 @@
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
+
         <div id="hour-16" class="row time-block">
             <div class="col-md-1 hour">
                 4PM
@@ -92,6 +100,7 @@
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
 
         </div>
+
         <div id="hour-17" class="row time-block">
             <div class="col-md-1 hour">
                 5PM
@@ -102,6 +111,8 @@
 
         </div>
 
+
+        <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
